<resources>
    <string name="app_name">jarvice</string>

    <!-- splash -->
    <string name="splash_loading_data">데이터를 받아오는 중입니다...</string>

    <!-- TAB -->
    <string name="main_app_name">JARVICE</string>
    <string name="main_tab_home">HOME</string>
    <string name="main_tab_deadline">마감내역</string>
    <string name="main_tab_shop_assistant">가게도우미</string>
    <string name="main_tab_shop_analysis">가게분석</string>

    <!-- HOME -->
    <string name="main_home_today_report">TODAY REPORT</string>
    <string name="main_home_today_report_detail">오늘 하루 매장 마감내역을\n한 눈에 확인하세요!</string>
    <string name="main_home_commercial_title">자영업자를 위해 만든 서비스</string>
    <string name="main_home_commercial_detail">실제 가게를 운영하면서 느꼈던 필요한 정보를 모아\n사장님들을 위한 서비스를 직접 만들게 되었습니다.\n전국의 모든 자영업자들을 응원합니다. </string>
    <string name="main_home_commercial_by_boss">다락 안암점 사장 최수혁 올림</string>

    <!-- 자비스 소개-->
    <string name="main_home_intro_title">자비스 소개</string>
    <string name="main_home_intro_first_title">가게 운영을 효율적으로!</string>
    <string name="main_home_intro_first_detail">실제 데이터 기반 방문 및 매출 분석으로\n가게 영업 상황을 정확하게 파악해 보세요.\n매출은 늘고, 지출은 줄도록 도와드려요.</string>
    <string name="main_home_intro_second_title">매출 정리를 간편하게!</string>
    <string name="main_home_intro_second_detail">수기로 그때그때 관리해 실수할 일 없이,\n엑셀로 번거롭게 작업할 필요 없이,\n매일 자동으로 가게 상황을 보고드려요.</string>
    <string name="main_home_intro_third_title">필요한 데만 집중할 수 있도록!</string>
    <string name="main_home_intro_third_detail">매일매일 가게 운영만으로도 힘든 사장님이\n에너지를 중요한 일에만 쏟을 수 있도록\n번거로운 일은 자비스가 대신 처리해드려요.</string>

    <!-- 자비스 주요 기능-->
    <string name="main_home_function_title">자비스 주요 기능</string>
    <string name="main_home_function_tab_first">마감내역</string>
    <string name="main_home_function_tab_second">가게도우미</string>
    <string name="main_home_function_tab_third">가게분석</string>
    <string name="main_home_function_tab_first_title">마감 영수증 공유</string>
    <string name="main_home_function_tab_first_detail">한번 보고 버리는 종이 영수증을 정확하게 분석, 정리하여\n핸드폰으로 한 눈에 볼 수 있도록 영수증을 공유드립니다.</string>
    <string name="main_home_function_tab_second_title">복잡한 가게 운영을 더욱 간편하게!</string>
    <string name="main_home_function_tab_second_detail">알바관리, 단체관리, 레시피 등 수기로 작성하여 여기저기\n흩어져 있던 중요한 정보들을 간편하게 관리해드립니다.</string>
    <string name="main_home_function_tab_third_title">주기 별 마감 리포트 공유</string>
    <string name="main_home_function_tab_third_detail">주, 월 별로 마감 내역을 정리하고 상세하게 분석하여\n가게가 어떤 상황인지 주기별로 리포트를 공유해드립니다.</string>

    <!-- CBT -->
    <string name="main_home_cbt_title">곧 CBT 예정입니다.\n사전 예약을 원하시는 분께서는 구독해주세요</string>
    <string name="main_home_cbt_button">구독하기</string>
    <string name="main_home_cbt_edit_hint">email@domain.com</string>

    <!-- 마감내역 -->
    <string name="main_deadline_title_company">주식회사 작은다락 243-86-01269</string>
    <string name="main_deadline_title_date">매출 알려드려요.</string>
    <string name="main_deadline_bar_graph_title">매출 그래프</string>
    <string name="main_deadline_day">일</string>
    <string name="main_deadline_week">주</string>
    <string name="main_deadline_month">월</string>
    
    <string name="main_deadline_pie_graph_title">매출 통계</string>
    <string name="main_deadline_pie_graph_food">음식</string>
    <string name="main_deadline_pie_graph_beer">주류</string>
    <string name="main_deadline_pie_graph_cock">칵테일</string>
    <string name="main_deadline_pie_graph_liquor">양주</string>
    <string name="main_deadline_pie_graph_drink">음료</string>
    <string name="main_deadline_pie_graph_lunch">점심</string>
    <string name="main_deadline_pie_graph_delivery">배달</string>

    <string name="main_deadline_pie_graph_sell_real">총 매출</string>
    <string name="main_deadline_pie_graph_detail_empty">매출 내역이 없습니다.</string>

    <string name="main_deadline_visit_graph_title">시간대 별 방문수</string>
    <string name="main_deadline_visit_graph_lunch">점심</string>
    <string name="main_deadline_visit_graph_dinner">저녁</string>
    <string name="main_deadline_visit_labels">방문자 수</string>
    <string name="main_deadline_visit_yaxis">방문수</string>
    <string name="main_deadline_visit_xaxis">시간</string>

    <!-- 어제의 top 메뉴 -->
    <string name="main_deadline_top_menu_title">어제의 TOP 메뉴</string>
    <string name="main_deadline_top_menu_sell_rank">매출액</string>
    <string name="main_deadline_top_menu_order_rank">주문수</string>

    <!-- 가게 도우미 -->
    <string name="main_helper_notice_title">공지·예약</string>
    <string name="main_helper_notice_settings_modify">수정하기</string>
    <string name="main_helper_notice_settings_delete">삭제하기</string>
    <string name="main_helper_notice_settings_alarm">알림 보내기</string>
    <string name="main_helper_notice_add_error">공지·예약은 3개 이상 추가하실 수 없습니다.</string>
    <string name="dialog_title_notification_add">공지·예약을 입력하세요.</string>
    <string name="dialog_title_todolist_add">To Do List를 입력하세요.</string>
    <string name="dialog_title_notification_delete">공지·예약을 삭제하시겠습니까?</string>
    <string name="dialog_title_todolist_delete">To Do List를 삭제하시겠습니까?</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_confirm">완료</string>
    <string name="dialog_modify">수정 완료</string>
    <string name="dialog_modify_err_message">이전과 동일한 내용입니다.</string>

    <string name="dialog_helper_todo_title">To Do List</string>
    <string name="main_helper_todolist_add">추가하기</string>
    
    <!-- 가게 분석 -->
    <string name="main_analysis_sales_title">매출 통계</string>
    <string name="main_analysis_sales_daily">요일</string>
    <string name="main_analysis_sales_week">주차</string>
    <string name="main_analysis_combined_bar_y">매출</string>
    <string name="main_analysis_visit_title">방문 통계</string>
    <string name="main_analysis_category_title">카테고리 별 매출</string>
    <string name="main_analysis_sales_legend">평균 매출</string>
    <string name="main_analysis_category_sales_title">카테고리 별 인기메뉴 통계</string>

    <!-- 210721 추가 -->
    <string name="todo_list_title_01">주방오픈</string>
    <string name="todo_list_title_02">주방마감</string>
    <string name="todo_list_title_03">바오픈</string>
    <string name="todo_list_title_04">바마감</string>
    <string name="todo_list_title_05">홀오픈</string>
    <string name="todo_list_title_06">홀마감</string>

    <!-- 누락 -->
    <string name="unknown_result">알 수 없음</string>

</resources>
