<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- 최상단 영역 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/main_home_today_report_radius"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="33dp"
                        android:paddingLeft="25dp"
                        android:text="@string/main_home_today_report"
                        android:textColor="@color/color_222222"
                        android:textSize="14dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:lineSpacingExtra="5dp"
                        android:paddingLeft="25dp"
                        android:text="@string/main_home_today_report_detail"
                        android:textColor="@color/color_222222"
                        android:textSize="15dp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/group_2" />
            </LinearLayout>

            <!-- 두번쨰 영역-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/color_f7f9fd"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="35dp"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="35dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_home_commercial_title"
                        android:textColor="@color/color_222222"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9.5dp"
                        android:lineSpacingExtra="7dp"
                        android:text="@string/main_home_commercial_detail"
                        android:textColor="@color/color_666666"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/main_home_commercial_by_boss"
                        android:textColor="@color/color_666666"
                        android:textSize="13dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!-- 소개 영역 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_home_intro_title"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/color_222222" />

                <!--첫 번째 영역 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="9.5dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="01"
                        android:textColor="@color/color_ef638b"
                        android:textStyle="italic"
                        android:textSize="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/first_intro_circular_border_layout">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:paddingTop="9.5dp"
                            android:paddingBottom="7.5dp"
                            android:text="@string/main_home_intro_first_title"
                            android:background="@drawable/first_intro_circular_border_text"
                            android:textColor="@color/color_ffffff"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                        
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:paddingTop="14dp"
                            android:paddingBottom="13dp"
                            android:paddingRight="11dp"
                            android:text="@string/main_home_intro_first_detail"
                            android:textSize="14dp"
                            android:lineSpacingExtra="6sp"

                            android:textColor="@color/color_666666"/>
                    </LinearLayout>
                </LinearLayout>

                <!--두 번째 영역 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="9.5dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="02"
                        android:textColor="@color/color_7468fa"
                        android:textStyle="italic"
                        android:textSize="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/second_intro_circular_border_layout">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:paddingTop="9.5dp"
                            android:paddingBottom="7.5dp"
                            android:text="@string/main_home_intro_second_title"
                            android:background="@drawable/second_intro_circular_border_text"
                            android:textColor="@color/color_ffffff"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:paddingTop="14dp"
                            android:paddingBottom="13dp"
                            android:paddingRight="11dp"
                            android:text="@string/main_home_intro_second_detail"
                            android:textSize="14dp"
                            android:lineSpacingExtra="6sp"
                            android:textColor="@color/color_666666"/>
                    </LinearLayout>
                </LinearLayout>

                <!--세 번째 영역 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="9.5dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="01"
                        android:textColor="@color/color_25d371"
                        android:textStyle="italic"
                        android:textSize="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/third_intro_circular_border_layout">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:paddingTop="9.5dp"
                            android:paddingBottom="7.5dp"
                            android:text="@string/main_home_intro_third_title"
                            android:background="@drawable/third_intro_circular_border_text"
                            android:textColor="@color/color_ffffff"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:paddingTop="14dp"
                            android:paddingBottom="13dp"
                            android:paddingRight="11dp"
                            android:text="@string/main_home_intro_third_detail"
                            android:textSize="14dp"
                            android:lineSpacingExtra="6sp"
                            android:textColor="@color/color_666666"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <!-- 슬라이드 영역 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="dsadadsadssa"
                android:textSize="20dp" />

            <!-- 자비스 주요 기능-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/main_home_function_title"
                    android:textColor="@color/color_222222"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="a" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="b" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="c" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/group_2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_home_function_tab_first_title"
                    android:textSize="16dp"
                    android:textColor="@color/color_333333"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_home_function_tab_first_detail"
                    android:textSize="13dp"
                    android:textColor="@color/color_333333"
                    android:lineSpacingExtra="6dp"/>

            </LinearLayout>

            <!-- CBT -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/color_282f4b">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_home_cbt_title"
                    android:textSize="14dp"
                    android:textColor="@color/color_ffffff"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>