<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:soundEffectsEnabled="false">

<!--    <ScrollView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content">-->


<!--    </ScrollView>-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/custom_option_popup_outer"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_custom_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32.5dp"
            android:layout_marginLeft="25dp"
            android:text="@string/dialog_title_notification_add"
            android:textColor="@color/color_333333"
            android:textSize="17dp"
            android:fontFamily="@font/notosans_bold"/>

        <EditText
            android:id="@+id/et_custom_dialog_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21.5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:inputType="text"
            android:theme="@style/EditTheme"
            android:textCursorDrawable="@color/color_4263ff"
            android:textSize="16dp"
            android:textColor="@color/color_2a2a2a"
            android:fontFamily="@font/notosans_regular"
            android:lineSpacingExtra="6sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@color/color_888888"
                android:text="@string/dialog_cancel"
                android:textAlignment="center"
                android:textColor="@color/color_ffffff"
                android:textSize="17dp"
                android:fontFamily="@font/notosans_bold" />

            <TextView
                android:id="@+id/tv_dialog_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@color/color_4263ff"
                android:text="@string/dialog_confirm"
                android:textAlignment="center"
                android:textColor="@color/color_ffffff"
                android:textSize="17dp"
                android:fontFamily="@font/notosans_bold"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>